--- a/src/components/IndexComponents/HeroBannerSection.astro
+++ b/src/components/IndexComponents/HeroBannerSection.astro
@@ -20,8 +20,9 @@ import { CtaButton } from "../CtaButton";
             Mejora tu salud y rendimiento con el fútbol
          </h1>
          <p class="max-w-[600px] mx-auto text-lg text-yellow-50 md:text-xl drop-shadow-md font-semibold">
-            Nuestra escuela de fútbol para adultos combina entrenamiento deportivo de calidad con un enfoque en la
-            salud, bienestar y acondicionamiento físico. Entrena, compite y mejora tu calidad de vida.
+            Academia especializada en adultos que combina fútbol con nutrición, acondicionamiento físico y coaching.
+            Entrena con propósito, mejora tu bienestar y alcanza tu mejor versión.
+            Únete a una comunidad que transforma vidas a través del deporte.
          </p>
          <div>
             <CtaButton client:visible />
