--- a/src/components/IndexComponents/ImageVideoSection.astro
+++ b/src/components/IndexComponents/ImageVideoSection.astro
@@ -7,7 +7,9 @@ import { Video } from "./Video";
       <div class="flex flex-col items-center justify-center space-y-4 text-center mb-12">
          <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">Nuestra Metodología</h2>
          <p class="max-w-[700px] text-gray-500 md:text-xl">
-            Conoce cómo trabajamos para mejorar tu condición física y habilidades futbolísticas
+            Combinamos fútbol y entrenamiento funcional en sesiones dinámicas y efectivas.<br>
+            Mejoramos tu condición física mientras desarrollas habilidades futbolísticas.<br>
+            Sumamos asesoría nutricional y coaching para un enfoque integral.
          </p>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
