--- a/src/components/IndexComponents/LocationSection.astro
+++ b/src/components/IndexComponents/LocationSection.astro
@@ -7,6 +7,7 @@ const locations: Location[] = [
    {
       name: "Estadio Julio Montjoy",
       address: "Jr. Santo Cristo 584 - Santiago de Surco",
+      schedule: ["Martes y Jueves - 6:30am", "Lunes a Viernes - 8:00pm"],
       image: "/images/julio-montjoy.jpg",
       latitude: -12.1457316,
       longitude: -77.000545,
@@ -15,6 +16,7 @@ const locations: Location[] = [
    {
       name: "Colegio Alfonso Ugarte",
       address: "Chacarilla 591 - San Isidro",
+      schedule: ["Lunes a Viernes - 8:00pm"],
       image: "/images/alfonso-ugarte.jpg",
       latitude: -12.1006105,
       longitude: -77.0278991,
@@ -24,7 +26,7 @@ const locations: Location[] = [
 
 ---
 
-<section class="md:py-20 py-10 md:px-20 px-5 bg-zinc-50" id="locations">
+<section class="md:py-20 py-10 md:px-20 px-5 bg-white" id="locations">
    <div class="container mx-auto px-4 md:px-6">
       <div class="flex flex-col items-center justify-center space-y-4 text-center mb-12">
          <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">Nuestras Sedes</h2>
