--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import { WhatsappButton } from "../components/WhatsappButton"
 		<CoachesSection />
 
 		{/* Sponsors */}
-		<!-- <SponsorsSection /> -->
+		<SponsorsSection />
 
 		{/* Locations */}
 		<LocationSection />
