video youtube, favicon dark mode

--- a/src/components/IndexComponents/HeroBannerSection.astro
+++ b/src/components/IndexComponents/HeroBannerSection.astro
@@ -7,7 +7,7 @@ import { CtaButton } from "../CtaButton";
    <div class="absolute inset-0 z-0">
       {/* Background Image with Brightness */}
       <img
-         src="/images/banner-1.jpeg"
+         src="/images/banner.webp"
          alt="Fútbol para adultos"
          class="object-cover brightness-40 w-full h-full"
       />
