--- a/src/components/IndexComponents/ImageVideoSection.astro
+++ b/src/components/IndexComponents/ImageVideoSection.astro
@@ -6,7 +6,7 @@ import { Video } from "./Video";
    <div class="container mx-auto px-4 md:px-6">
       <div class="flex flex-col items-center justify-center space-y-4 text-center mb-12">
          <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">Nuestra Metodología</h2>
-         <p class="max-w-[700px] text-gray-500 md:text-xl">
+         <p class="max-w-[900px] text-gray-500 md:text-xl">
             Combinamos fútbol y entrenamiento funcional en sesiones dinámicas y efectivas.<br>
             Mejoramos tu condición física mientras desarrollas habilidades futbolísticas.<br>
             Sumamos asesoría nutricional y coaching para un enfoque integral.
@@ -17,14 +17,14 @@ import { Video } from "./Video";
          <div class="flex flex-col gap-4">
             <div class="relative aspect-square rounded-lg overflow-hidden">
                <img
-                  src="/images/image-1.jpg"
+                  src="/images/image-3.webp"
                   alt="Entrenamiento técnico"
                   class="object-cover"
                />
             </div>
             <div class="relative aspect-square rounded-lg overflow-hidden">
                <img
-                  src="/images/image-2.jpeg"
+                  src="/images/image-4.webp"
                   alt="Entrenamiento táctico"
                   class="object-cover"
                />
@@ -33,21 +33,21 @@ import { Video } from "./Video";
 
          {/* Vertical video in middle */}
          <div class="relative rounded-lg overflow-hidden bg-gold-800/20">
-            <!-- <Video client:only="react" /> -->
+            <Video client:only="react" />
          </div>
 
          {/* 2 images on right - stacked vertically */}
          <div class="flex flex-col gap-4">
             <div class="relative aspect-square rounded-lg overflow-hidden">
                <img
-                  src="/images/image-3.jpeg"
+                  src="/images/image-2.webp"
                   alt="Entrenamiento físico"
                   class="object-cover"
                />
             </div>
             <div class="relative aspect-square rounded-lg overflow-hidden">
                <img
-                  src="/images/image-4.jpeg"
+                  src="/images/image-1.webp"
                   alt="Entrenamiento mental"
                   class="object-cover"
                />
