--- a/src/components/IndexComponents/LocationSection.astro
+++ b/src/components/IndexComponents/LocationSection.astro
@@ -26,7 +26,7 @@ const locations: Location[] = [
 
 ---
 
-<section class="md:py-20 py-10 md:px-20 px-5 bg-white" id="locations">
+<section class="md:py-20 py-10 md:px-20 px-5 bg-zinc-50" id="locations">
    <div class="container mx-auto px-4 md:px-6">
       <div class="flex flex-col items-center justify-center space-y-4 text-center mb-12">
          <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">Nuestras Sedes</h2>
