--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,9 @@
 ---
+import { Navbar } from '../components/Navbar';
+import { WhatsappButton } from '../components/WhatsappButton';
+import { ViewTransitions } from 'astro:transitions';
 import '../styles/global.css';
+
 ---
 
 <!doctype html>
@@ -7,11 +11,16 @@ import '../styles/global.css';
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon_light.svg" media="(prefers-color-scheme: no-preference)" />
+		<link rel="icon" type="image/svg+xml" href="/favicon_dark.svg" media="(prefers-color-scheme: dark)" />
+		<link rel="icon" type="image/svg+xml" href="/favicon_light.svg" media="(prefers-color-scheme: light)" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Futbol 360</title>
+		<ViewTransitions />
 	</head>
 	<body>
+		<Navbar client:visible />
+		<WhatsappButton client:visible />
 		<slot />
 	</body>
 </html>
