cambio de imagenes de videosection

--- a/src/components/IndexComponents/ImageVideoSection.astro
+++ b/src/components/IndexComponents/ImageVideoSection.astro
@@ -17,16 +17,16 @@ import { Video } from "./Video";
          <div class="flex flex-col gap-4">
             <div class="relative aspect-square rounded-lg overflow-hidden">
                <img
-                  src="/images/image-3.webp"
+                  src="/images/entrenamiento3.webp"
                   alt="Entrenamiento técnico"
-                  class="object-cover"
+                  class="w-full h-full object-cover"
                />
             </div>
             <div class="relative aspect-square rounded-lg overflow-hidden">
                <img
-                  src="/images/image-4.webp"
+                  src="/images/entrenamiento4.webp"
                   alt="Entrenamiento táctico"
-                  class="object-cover"
+                  class="w-full h-full object-cover"
                />
             </div>
          </div>
@@ -40,16 +40,16 @@ import { Video } from "./Video";
          <div class="flex flex-col gap-4">
             <div class="relative aspect-square rounded-lg overflow-hidden">
                <img
-                  src="/images/image-2.webp"
+                  src="/images/entrenamiento2.webp"
                   alt="Entrenamiento físico"
-                  class="object-cover"
+                  class="w-full h-full object-cover"
                />
             </div>
             <div class="relative aspect-square rounded-lg overflow-hidden">
                <img
-                  src="/images/image-1.webp"
+                  src="/images/entrenamiento1.webp"
                   alt="Entrenamiento mental"
-                  class="object-cover"
+                  class="w-full h-full object-cover"
                />
             </div>
          </div>
