--- a/src/components/IndexComponents/CoachesSection.astro
+++ b/src/components/IndexComponents/CoachesSection.astro
@@ -3,7 +3,6 @@
 import type { Coach } from "../../interfaces/coach.interface";
 
 import { FaInstagram } from "react-icons/fa";
-import { FaLinkedin } from "react-icons/fa6";
 
 const coaches: Coach[] = [
    {
@@ -14,13 +13,13 @@ const coaches: Coach[] = [
    },
    {
       name: "Jaime Avellaneda",
-      position: "Entrenador",
+      position: "Staff",
       image: "/images/jaime-avellaneda.jpg",
       instagram: "http://www.instagram.com/jaimeavellaneda10",
    },
    {
       name: "Alejandro Pareja",
-      position: "Entrenador",
+      position: "Staff",
       image: "/images/alejandro-pareja.jpg",
       instagram: "http://www.instagram.com/alejopa1995",
    },
@@ -29,6 +28,30 @@ const coaches: Coach[] = [
       position: "Entrenador",
       image: "/images/marlon-zacarias.jpg",
       instagram: "http://www.instagram.com/jp_zacmar",
+   },
+   {
+      name: "Antonio Dulando",
+      position: "Entrenador",
+      image: "/images/Antonio.jpeg",
+      instagram: "http://www.instagram.com/tonidulanto",
+   },
+   {
+      name: "Fernando Espejo",
+      position: "Entrenador",
+      image: "/images/Fernando.jpeg",
+      instagram: "http://www.instagram.com/fernandoespejo.f10",
+   },
+   {
+      name: "Josue Madalengoitia",
+      position: "Entrenador",
+      image: "/images/Josue.jpeg",
+      instagram: "http://www.instagram.com/josue95__",
+   },
+   {
+      name: "Juan Diego Cuya",
+      position: "Entrenador",
+      image: "/images/Juandiego.jpeg",
+      instagram: "http://www.instagram.com/juandiego._.10",
    },
 ]
 ---
