--- a/src/components/IndexComponents/HeroBannerSection.astro
+++ b/src/components/IndexComponents/HeroBannerSection.astro
@@ -20,8 +20,8 @@ import { CtaButton } from "../CtaButton";
             Mejora tu salud y rendimiento con el fútbol
          </h1>
          <p class="max-w-[600px] mx-auto text-lg text-yellow-50 md:text-xl drop-shadow-md font-semibold">
-            Academia especializada en adultos que combina fútbol con nutrición, acondicionamiento físico y coaching.
-            Entrena con propósito, mejora tu bienestar y alcanza tu mejor versión.
+            Academia de fútbol para adultos que combina entrenamiento físico, nutrición y coaching.
+            Entrena con propósito, mejora tu salud y saca tu mejor versión.
             Únete a una comunidad que transforma vidas a través del deporte.
          </p>
          <div>
